--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.6} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.7} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -71,8 +71,8 @@ Il presente documento descrive l'anailisi dei costi e delle risorse effettuata d
 
 \section*{\Large Redazione:}
 	\begin{elencopuntato}[\normindent]
-		\item Dal Bosco Davide
 		\item Cunico Marco
+		\item Dal Bosco Davide
 	\end{elencopuntato}
 
 \section*{\Large Approvazione:}
@@ -107,6 +107,7 @@ Il presente documento descrive l'anailisi dei costi e delle risorse effettuata d
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+          0.7 & 05/12/2008 Inserimento Distribuzione Ruoli e Gestione del Piano di Progetto & Cunico Marco \\
           0.6 & 05/12/2008 Inserimento Preventivo Rotazione Ruoli per fase di progetto & Cunico Marco \\
           0.5 & 05/12/2008 Inserimento della sezione relativa all'Analisi e Gestione dei Rischi & Dal Bosco Davide \\         
           0.4 & 04/12/2008 Inserimento attribuzione ruoli & Cunico Marco \\	
@@ -186,7 +187,7 @@ Regole da rispettare per la realizzazione del progetto didattico:
 		 \textbf{Cognome e Nome} & \textbf{Matricola} & \textbf{E-mail}\\
 		 \hline
 		Bizzotto Piero & 540804 & piero.bizzotto@gmail.com \\
-		Carollo Mirko & 542902 & da definire\\
+		Carollo Mirko & 542902 & mirko.carollo@gmail.com\\
 		Cunico Marco & 540754 & marco.cunico@gmail.com\\
 		Dal Bosco Davide & 539402 & mrdavi86@gmail.com\\
 		Dissegna Stefano & 561011 & stefano.dissegna@gmail.com \\
@@ -418,9 +419,7 @@ da completare\\
 
 \sezione{Gestione del Piano di Progetto}
 da completare\\
-\subsezione{Obiettivi} PROBE si rende disponibile ad accogliere 
-eventuali obiezioni che emergessero nel corso delle revisioni.
-
+\subsezione{Obiettivi}
 L'obiettivo del documento denominato "Piano di Progetto" \`e di distribuire le risorse durante l'arco temporale 
 contenente lo sviluppo del capitolato d'appalto. Questa distribuzione ovviamente deve rispettare i vincoli presentati 
 nella sezione "Assunzioni Iniziali". Data l'inesperienza dei membri della societ\`a \`e possibile che ci sia una 
