--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -422,8 +422,7 @@ da completare\\
 \subsezione{Obiettivi}
 L'obiettivo del documento denominato "Piano di Progetto" \`e di distribuire le risorse durante l'arco temporale 
 contenente lo sviluppo del capitolato d'appalto. Questa distribuzione ovviamente deve rispettare i vincoli presentati 
-nella sezione "Assunzioni Iniziali". Data l'inesperienza dei membri della societ\`a \`e possibile che ci sia una 
-discrepanza tra le ore preventivate e quelle presenti nel consuntivo.
+nella sezione "Assunzioni Iniziali".
 
 \sezione{Analisi e Gestione dei Rischi}
 In questa sezione saranno presi in considerazione i possibili problemi che potrebbero sorgere durante la realizzazione del progetto, sia dal punto di vista della pianificazione delle fasi di lavoro, che da eventuali rischi relativi alla tecnologia usata.\\
