--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -152,8 +152,23 @@ Glossario
 
 \newpage
 
+\section*{L}
+\textbf{\LaTeX:}
+\LaTeX \ \`e un linguaggio di markup usato per la redazione di documentii che permette di gestire in maniera semplice ed automatica la formattazione del testo.\\
+
+\textbf{Linguaggio di markup:}
+Un linguaggio di markup \`e un linguaggio che stabilisce delle convenzioni standard e descrive dei meccanismi per la rappresentazione del testo.\\
+
+\section*{O}
+\textbf{OpenSource:}
+Con il termine OpenSource si indica un tipo di licenza software in cui il codice sorgente viene reso disponibile; lo scopo dell'OpneSource \`e quello di favorire la collaborazione tra gli sviluppatori e il progresso del software tramite la condivisione di idee.\\
+
+\section*{P}
+\textbf{PNG:}
+Il PNG (Portable Network Graphics) \`e un formato di file che permette di memorizzare immagini senza perdere informazioni.\\
+
 \section*{W}
 \textbf{Wiki:}
-\text Un wiki \`e ...
+Un wiki \`e un sistema che permette di gestire pagine web in maniera collaborativa favorendo la codivisione di informazioni tra gli utenti; in un wiki ognuno pu\`o aggiungere o modificare i contenuti di una pagina attraverso il browser.\\
 
 \end{document}
