--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -171,7 +171,7 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 
 \sezione{Redazione dei documenti}
 	I documenti sono redatti in lingua italiana e presentano termini in inglese solamente nel caso di riferimenti al codice o a termini tecnici. Le parole presenti nel glossario sono sottolineate alla prima occorrenza nel documento.\\
-	Per la redazione dei documenti si \`e scelto di usare il linguaggio di markup \LaTeX, che gestisce automaticamente la formattazione del testo permettendo agli autori di concentrarsi maggiormente sui contenuti. Per  la creazione di un documento si utilizzano i template di base presenti nel repository dell'azienda.\\
+	Per la redazione dei documenti si \`e scelto di usare il \underline{linguaggio di markup} \underline{\LaTeX}, che gestisce automaticamente la formattazione del testo permettendo agli autori di concentrarsi maggiormente sui contenuti. Per  la creazione di un documento si utilizzano i template di base presenti nel repository dell'azienda.\\
 	I nomi dei documenti seguono le seguenti regole:
 	\begin{elencopuntato}[\normindent]
 		\item[-] Devono iniziare con una lettera in maiuscolo.
@@ -192,7 +192,7 @@ Il gruppo si incontra settimanalmente per aggiornarsi e verificare lo stato di a
 L'azienda si serve del sistema di mailing-list offerto da Google (\href{http://groups.google.it/}{http://groups.google.it/}) per discutere le diverse problematiche inerenti al progetto e per aggiornamenti di ogni tipo.
 
 \sezione{Strumenti di sviluppo}
-L'azienda sceglie di utilizzare software con licenze OpenSource poich\`e rispecchiano le linee di pensiero dei componenti del gruppo. Inoltre tutto il software utilizzato \`e disponibile gratuitamente, per non gravare sui costi finali del prodotto.
+L'azienda sceglie di utilizzare software con licenze \underline{OpenSource} poich\`e rispecchiano le linee di pensiero dei componenti del gruppo. Inoltre tutto il software utilizzato \`e disponibile gratuitamente, per non gravare sui costi finali del prodotto.
 
 \subsezione{Sistema di versionamento}
 Per il versionamento si usa il sistema Git (\href{http://git.or.cz/}{http://git.or.cz/}) nella sua ultima versione disponibile (1.6.0.4) e come repository comune GitHub (\href{http://github.com}{http://github.com}) poich\`e offre una comoda interfaccia grafica per visualizzare le modifiche effettuate, e non aggiunge costi in quanto gratuito nella sua versione base. GitHub offre inoltre un \underline{wiki} utilizzabile all'occorrenza.\\
