Gl: aggiunti termini

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -73,18 +73,18 @@ Glossario
 			\begin{tabular}
 				{|c|c|}
 				\hline
-				%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+				%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\multicolumn{2}{|c|}{ \textbf{Redazione} } \\
 				\hline
 				\textbf{Fase} & \textbf{Redattori} \\
-				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\hline
-				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%		
 				{Pre-RR} & \\
 				\hline
 				{RR-RPP} & \\
 				\hline
-				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
 			\caption{Lista Redattori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
 			\label{tabredazione}
@@ -98,18 +98,18 @@ Glossario
 		\begin{tabular}
 			{|c|c|}
 			\hline
-			%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\multicolumn{2}{|c|}{ \textbf{Approvazione} } \\
 			\hline
 			\textbf{Fase} & \textbf{Approvatori} \\
-			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
-			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
 			{Pre-RR} &  \\
 			\hline
 			{RR-RPP} & \\
 			\hline
-			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 		\caption{Lista Approvatori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
 		\label{tabapprovazione}
@@ -152,6 +152,15 @@ Glossario
 
 \newpage
 
+
+\section*{C}
+\textbf{Canvas:}
+Canvas \` e una estensione dell'HTML standard che permette il rendering dinamico di immagini bitmap gestibili attraverso un linguaggio di scripting.  Consiste in una regione disegnabile, definita in codice HTML con gli attributi \textit{height} and \textit{width}. Il codice JavaScript pu\`o accedere all'area con un set completo di funzioni per il disegno, simili a quelle comuni ad altre API 2D, permettendo cos\`i la generazione dinamica di disegni.
+
+\section*{J}
+\textbf{JavaScript:}
+JavaScript(o ECMAScript) \`e un linguaggio di scripting orientato agli oggetti comunemente usato nei siti web. \`E  uno standard ISO.
+
 \section*{L}
 \textbf{\LaTeX:}
 \LaTeX \ \`e un linguaggio di markup usato per la redazione di documentii che permette di gestire in maniera semplice ed automatica la formattazione del testo.\\
@@ -166,6 +175,10 @@ Con il termine OpenSource si indica un tipo di licenza software in cui il codice
 \section*{P}
 \textbf{PNG:}
 Il PNG (Portable Network Graphics) \`e un formato di file che permette di memorizzare immagini senza perdere informazioni.\\
+
+\section*{S}
+\textbf{SVG:}
+L' SVG (Scalable Vector Graphics) \` indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
 
 \section*{W}
 \textbf{Wiki:}
