--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -208,7 +208,7 @@ Date le Assunzioni Iniziali precedentemente descritte, ed essendo il gruppo WebS
 				\item Revisione di Qualifica (RQ)
 				\item Revisione di Accettazione (RA)
 			\end{elenconumerato}
-La rotazione dei ruoli avviene come da tabella (\ref{tab:tavprevrotazione}) della pagina ~\pageref{tab:tabprevrotazione}.\\
+La rotazione dei ruoli avviene come da tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli}.\\
 Dato che ogni componente del gruppo dovr\`a assumere tutti i ruoli,\`e previsto che nelle varie fasi del progetto i membri della societ\`a si assumano piu' incarichi. Non \`e permesso che uno stesso membro ricopra ruoli in conflitto di interessi tra loro.\\
 
 \sezione{Pianificazione}
@@ -343,8 +343,34 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
 \includegraphics[width=350pt]{RQ-RA_Costi}
+
 \subsezione{Distribuzione dei ruoli}
-da completare\\
+La distribuzione dei ruoli all'interno dell'azienda e' stata fatta in modo da dare a tutti i membri di Webshape la possibilita di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli in modo piu equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli e' meglio descritta nella tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli} , e' anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) della pagina ~\pageref{tab:TabellaPrevPersOre}.
+
+Per conoscenza del cliente, forniamo anche una stima approssimativa dell' impiego di ore rispetto ad ogni ruolo nella fase antecedente la RR. La remunerazione di tali ore non è a carico del committente, ma WebShape desidera mostrare quanto impegno sia stato investito nel progetto. La maggiorparte degli sforzi sono stati indirizzati al dotare Webshape di metodo di lavoro adatti allo svolgimento del progetto e per prendere confidenza con queste tecnologie.\\
+
+\begin{table}[h]
+	\begin{center}
+		  \begin{tabular}{|c|c|c|c|}
+		 \hline 
+		 \textbf{Ruolo} & \textbf{Ore di lavoro} \\
+		 \hline
+		Responsabile & 20 \\
+		Amministratore & 28 \\
+		Analista & 65 \\
+		Progettista & 10 \\
+		Programmtore & 0 \\
+		Verificatore & 12 \\
+        \hline
+        \textbf{Totale} & \textbf{135} \\
+		\hline
+		\end{tabular}
+	\caption{Ore PRE-RR} 
+	\label{tab:tabella_PRE_RR}
+	\end{center}	
+\end{table}
+
+\newpage
 
 \subsubsezione{Distribuzione per fase di progetto}
 \begin{table}[!h]
@@ -377,11 +403,12 @@ da completare\\
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 	\caption{Preventivo rotazione ruoli per fase di progetto} %INSERIRE DIDASCALIA - SE NECESSARIA - 
-	\label{tabprevrotazione}
+	\label{tab:TabellaRotazRuoli}
 	\end{center}	
 \end{table}
 
 \subsubsezione{Distribuzione dei carichi di lavoro}
+In questa sezione e' presente l'intera distribuzione del carico di lavoro per membro del gruppo.\\
 
 \begin{table}[!h]
 	\begin{center}
@@ -413,12 +440,11 @@ da completare\\
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 	\caption{Preventivo carico persona in ore} %INSERIRE DIDASCALIA - SE NECESSARIA - 
-	\label{tabprevcaricopersonaore}
+	\label{tab:TabellaPrevPersOre}
 	\end{center}	
 \end{table}
 
 \sezione{Gestione del Piano di Progetto}
-da completare\\
 \subsezione{Obiettivi}
 L'obiettivo del documento denominato "Piano di Progetto" \`e di distribuire le risorse durante l'arco temporale 
 contenente lo sviluppo del capitolato d'appalto. Questa distribuzione ovviamente deve rispettare i vincoli presentati 
