PP: correzione sintattica

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -327,7 +327,7 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 		Amministratore & 18 & 360\\
 		Analista & 0 & 0\\
 		Progettista & 0 & 0\\
-		Programmtore & 0 & 0 \\
+		Programmatore & 0 & 0 \\
 		Verificatore & 15 & 240\\
         \hline
         \textbf{Totale} & \textbf{45} & \textbf{960}\\
@@ -348,9 +348,9 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 \includegraphics[width=350pt]{RQ-RA_Costi}
 
 \subsezione{Distribuzione dei ruoli}
-La distribuzione dei ruoli all'interno dell'azienda e' stata fatta in modo da dare a tutti i membri di Webshape la possibilita di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli in modo piu equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli e' meglio descritta nella tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli} , e' anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) della pagina ~\pageref{tab:TabellaPrevPersOre}.
+La distribuzione dei ruoli all'interno dell'azienda e' stata realizzata in modo da permettere a tutti i membri di Webshape di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli nel modo pi\`u equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli \`e meglio descritta nella tabella (\ref{tab:TabellaRotazRuoli}) della pagina ~\pageref{tab:TabellaRotazRuoli} , \`e anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) della pagina ~\pageref{tab:TabellaPrevPersOre}.
 
-Per conoscenza del cliente, forniamo anche una stima approssimativa dell' impiego di ore rispetto ad ogni ruolo nella fase antecedente la RR. La remunerazione di tali ore non è a carico del committente, ma WebShape desidera mostrare quanto impegno sia stato investito nel progetto. La maggiorparte degli sforzi sono stati indirizzati al dotare Webshape di metodo di lavoro adatti allo svolgimento del progetto e per prendere confidenza con queste tecnologie.\\
+Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impiego orario rispetto ad ogni ruolo nella fase antecedente la RR. La remunerazione di tali ore non \`e a carico del committente, ma WebShape desidera mostrare quanto impegno sia stato investito nel progetto. La maggior parte degli sforzi \`e stata indirizzata nel dotare Webshape di metodi di lavoro adatti allo svolgimento del progetto e per meglio padroneggiare tali tecnologie.\\
 
 \begin{table}[h]
 	\begin{center}
@@ -426,7 +426,7 @@ In questa sezione e' presente l'intera distribuzione del carico di lavoro per me
 			\hline
 			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.} \\
 			\hline
-%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 								     %  RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   %
 			Bizzotto Piero &  11   &  15 &  10   &   25  &  11   &  33   \\ % R4
 			\hline
@@ -440,7 +440,7 @@ In questa sezione e' presente l'intera distribuzione del carico di lavoro per me
 			\hline
 			Geremia Mirco   &   14  &  10   &  18   &  13  &  15   &  35   \\ % R7
 			\hline		
-%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 	\caption{Preventivo carico persona in ore} %INSERIRE DIDASCALIA - SE NECESSARIA - 
 	\label{tab:TabellaPrevPersOre}
@@ -449,24 +449,24 @@ In questa sezione e' presente l'intera distribuzione del carico di lavoro per me
 
 \sezione{Gestione del Piano di Progetto}
 \subsezione{Obiettivi}
-L'obiettivo del documento denominato "Piano di Progetto" \`e di distribuire le risorse durante l'arco temporale 
+L'obiettivo del documento denominato "Piano di Progetto" \`e distribuire le risorse durante l'arco temporale 
 contenente lo sviluppo del capitolato d'appalto. Questa distribuzione ovviamente deve rispettare i vincoli presentati 
 nella sezione "Assunzioni Iniziali".
 
 \sezione{Analisi e Gestione dei Rischi}
-In questa sezione saranno presi in considerazione i possibili problemi che potrebbero sorgere durante la realizzazione del progetto, sia dal punto di vista della pianificazione delle fasi di lavoro, che da eventuali rischi relativi alla tecnologia usata.\\
+In questa sezione saranno presi in considerazione i possibili problemi che potrebbero sorgere durante la realizzazione del progetto, sia dal punto di vista della pianificazione delle fasi di lavoro, che da quello di eventuali rischi relativi alla tecnologia usata.\\
 I punti di rischio da noi identificati e valutati sono i seguenti:
 \begin{itemize}
 \item \textbf{Rischi inerenti al modello di ciclo di vita evolutivo}\\
-\`e molto importante effettuare una corretta scelta delle attivit\`a, da coordinare durante le varie fasi di lavoro.\\
+\`E molto importante effettuare una corretta scelta delle attivit\`a, da coordinare durante le varie fasi di lavoro.\\
 \item \textbf{Pianificazione e distribuzione dei ruoli}\\ 
-un punto fondamentale al quale bisogna prestare molta attenzione \`e la suddivisione dei ruoli e la sua gestione. Ogni componente dovr\`a assumere tutti i ruoli durante le varie fasi di progetto. Questo pu\`o portare ad una scarsa specializzazione dei membri dell'azienda, ma \`e un vincolo didattico indispensabile.
+Un punto fondamentale al quale bisogna prestare molta attenzione \`e la suddivisione dei ruoli e la sua gestione. Ogni componente dovr\`a assumere tutti i ruoli durante le varie fasi di progetto. Questo pu\`o portare ad una scarsa specializzazione dei membri dell'azienda, ma si tratta di un vincolo didattico indispensabile.\\
 \item \textbf{Mancanza del personale}\\
-essendo l'azienda formata da sei membri, nell'eventualit\`a che un membro non possa pi\`u partecipare alle attivit\`a di progetto, c'\`e un possibile rischio che l'azienda abbia un numero insufficiente di persone per continuare il lavoro sotto le ipotesi e le stime preventivate. In questo caso, l'azienda WebShape porter\`a comunque a termine il suo lavoro.\\
+Essendo l'azienda composta da sei membri, nell'eventualit\`a che uno di questi non possa pi\`u partecipare alle attivit\`a di progetto, c'\`e un possibile rischio che l'azienda abbia un numero insufficiente di persone per continuare il lavoro sotto le ipotesi e le stime preventivate. In questo caso, l'azienda WebShape porter\`a comunque a termine il suo lavoro.\\
 \item \textbf{Compatibilit\`a e portabilit\`a del prodotto}\\
-il prodotto finale, come da Requisiti, deve essere funzionante sui pi\`u moderni browser in circolazione. Questo per\`o \`e un fatto a discrezione dell'utente finale, il quale deve essere consapevole e informato che il prodotto non \`e retrocompatibile e quindi anche la portabilit\`a \`e a sua discrezione.
+Il prodotto finale, come da Requisiti, dovr\`a risultare funzionante sui pi\`u moderni browser in circolazione. Questo fatto \`e per\`o  a discrezione dell'utente finale, il quale deve essere consapevole della non retrocompatibilit\`a del prodotto, e quindi anche la portabilit\`a risulta essere  a sua discrezione.\\
 \item \textbf{Funzionalit\`a del prodotto}\\
-essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione a come il prodotto si presenta, rendendo l'accessibilit\`a a tutte le sue funzioni semplice e immediata.
+Essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione alla presentazione del prodotto, rendendo l'accessibilit\`a per tutte le sue funzioni semplice e immediata.
 \end{itemize}			
 
 da completare\\
