aggiunto JavaScript, ECMAScript, XML ed SVG al glossario

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -152,8 +152,24 @@ Glossario
 
 \newpage
 
+\section*{E}
+\textbf{ECMAScript}
+\text Si veda JavaScript
+
+\section*{J}
+\textbf{JavaScript}
+\text Linguaggio di programmazione client-side supportato dai principali browser.
+
+\section*{S}
+\textbf{SVG}
+\text Formato di file per immagini vettoriali raccomandato dal \textit{W3C} basato su XML.
+
 \section*{W}
 \textbf{Wiki:}
 \text Un wiki \`e ...
+
+\section*{X}
+\textbf{XML}
+\text Formato estensibile raccomandato dal \textit{W3C} per la rappresentazione di dati semistrutturati.
 
 \end{document}
