AR: rimosso \paragraph errato

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -242,7 +242,7 @@ Il seguente grafico descrive le interazioni tra l'utente finale e l'applicazione
 \caption{Funzionalit\`a dell'applicazione}
 \end{figure}
 
-\paragraph{Segue ora una descrizione testuale dei casi d'uso presentati dal grafico.}
+Segue ora una descrizione testuale dei casi d'uso presentati dal grafico.
 
 \subsubsezione{UC1 Caso d'uso: pulisci \underline{canvas}}
 \paragraph{Attori coinvolti} Utente
