AR: aggiunto RFD cancellazione area disegno

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -656,6 +656,7 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
 \begin{elenconumerato}[\textbf{RFD-}]{\subsubsecindent}
 \item{AJAXDRAW permette di disegnare a mano libera.}
 \item{AJAXDRAW permette di disegnare connettori per diagrammi.}
+\item{AJAXDRAW permette di cancellare completamente l'area di disegno.}
 \end{elenconumerato}
 
 %facoltativi
